Fixed items alignment weather section of post page

--- a/src/css/program-page.scss
+++ b/src/css/program-page.scss
@@ -141,7 +141,7 @@ main {
         .areas {
           display: flex;
           align-items: center;
-          flex-wrap: nowrap;
+          flex-wrap: wrap;
           column-gap: 5px;
           a {
             text-decoration: underline;
